change deprecated stuff